<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/primary_dark">

        <RelativeLayout
            android:id="@+id/video_container_rl"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/normal_margin"
            android:layout_marginLeft="@dimen/normal_margin"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginRight="@dimen/normal_margin"
            android:layout_marginEnd="@dimen/normal_margin">

            <com.google.android.exoplayer2.ui.PlayerView
                android:id="@+id/recipe_instructions_player"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true">

            </com.google.android.exoplayer2.ui.PlayerView>

            <ImageView
                android:id="@+id/recipe_instructions_thumbnail_iv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/recipe_step_instructions_image_content_description"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/recipe_step_instructions_tv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/normal_margin"
            android:layout_marginLeft="@dimen/normal_margin"
            android:layout_marginRight="@dimen/normal_margin"
            android:layout_marginBottom="@dimen/normal_margin"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:textSize="@dimen/recipe_step_instruction_textsize"
            tools:text="Recipe Step Instructions" />

        <LinearLayout
            android:id="@+id/button_container_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/previous_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/normal_margin"
                android:layout_marginRight="@dimen/normal_margin"
                android:layout_marginBottom="@dimen/normal_margin"
                android:layout_weight="1"
                android:text="@string/button_previous"
                android:onClick="onPreviousClicked"/>

            <Button
                android:id="@+id/next_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/normal_margin"
                android:layout_marginEnd="@dimen/normal_margin"
                android:layout_marginBottom="@dimen/normal_margin"
                android:layout_weight="1"
                android:text="@string/button_next"
                android:onClick="onNextClicked"/>

        </LinearLayout>

    </LinearLayout>
</layout>