<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.v7.widget.CardView
        android:id="@+id/recipe_step_cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin">

        <LinearLayout
            android:id="@+id/step_wrapper_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary_light"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/recipe_step_item_padding"
            android:paddingTop="@dimen/recipe_step_item_small_padding"
            android:paddingRight="@dimen/recipe_step_item_padding"
            android:paddingBottom="@dimen/recipe_step_item_small_padding">

            <TextView
                android:id="@+id/step_number_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/recipe_step_textsize"
                android:textStyle="bold"
                tools:text="Step # : " />

            <TextView
                android:id="@+id/step_short_description_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/recipe_step_textsize"
                android:textStyle="bold"
                tools:text="Short Description" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</layout>